# libfprint

./: .gitlab-ci.yml  meson.build  meson_options.txt
demo/: org.freedesktop.libfprint.Demo.json
libfprint/: fp-device-private.h  fp-device.c  fpi-device.c  fpi-device.h  meson.build
libfprint/drivers/: egis0570.c  nb1010.c  nb1010.h  vfs7552.c  vfs7552_proto.h
libfprint/drivers/synaptics/: synaptics.c
tests/: meson.build  test-fpi-device.c
